--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,18 @@
 {
     "name": "yohafiz/fb-page-feed",
-    "description": "Simple request to get any Facebook Page posts",
+    "description": "Simple wrapper class to get any Facebook Page posts",
     "keywords": ["php", "facebook"],
     "license": "MIT",
     "type": "project",
+    "authors": [
+        {
+            "name": "Mohd Hafiz",
+            "email": "mohd.yohafiz@gmail.com",
+            "homepage": "https://github.com/yohafiz"
+        }
+    ],
     "require": {
+       "php": ">=5.5",
        "guzzlehttp/guzzle": "~6.0"
     },
     "autoload": {
