fix composer.json autoload.psr-4

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,6 @@
        "guzzlehttp/guzzle": "~6.0"
     },
     "autoload": {
-        "psr-4": {"Yohafiz\\FbFeed": "src/"}
+        "psr-4": {"Yohafiz\\FbFeed\\": "src/"}
     }
 }
