--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "yohafiz/fb-page-feed",
+    "name": "xmhafiz/fb-page-feed",
     "description": "Simple wrapper class to get any Facebook Page posts",
     "keywords": ["php", "facebook"],
     "license": "MIT",
@@ -7,8 +7,8 @@
     "authors": [
         {
             "name": "Mohd Hafiz",
-            "email": "mohd.yohafiz@gmail.com",
-            "homepage": "https://github.com/yohafiz"
+            "email": "xmhafiz@gmail.com",
+            "homepage": "https://github.com/xmhafiz"
         }
     ],
     "require": {
@@ -16,6 +16,6 @@
        "guzzlehttp/guzzle": "~6.0"
     },
     "autoload": {
-        "psr-4": {"Yohafiz\\FbFeed\\": "src/"}
+        "psr-4": {"Xmhafiz\\FbFeed\\": "src/"}
     }
 }
