--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: php
 php:
-  - '5.4'
   - '5.5'
   - '5.6'
   - '7.0'
   - '7.1'
   - hhvm
   - nightly
+
+  before_script:
+  - composer install
