--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,9 @@ php:
 
 before_script:
   - composer install
+
+script:
+    - phpunit --coverage-clover=coverage.xml
+
+after_success:
+    - bash <(curl -s https://codecov.io/bash)
