--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     "autoload": {
         "psr-4": {
             "Xmhafiz\\FbFeed\\": "src/"
-        }
+        },
+        "files": ["helper/helpers.php"]
     }
 }
