--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,12 @@
         }
     ],
     "require": {
-       "php": ">=7.0",
-       "guzzlehttp/guzzle": "~6.0"
+        "php": ">=7.0",
+        "kitetail/zttp": "^0.6.0"
     },
     "require-dev": {
         "vlucas/phpdotenv": "~2.2",
-        "phpunit/phpunit": "~7.2"
+        "phpunit/phpunit": "^6.0"
     },
     "autoload": {
         "psr-4": {
