--- a/composer.json
+++ b/composer.json
@@ -13,16 +13,22 @@
     ],
     "require": {
         "php": ">=7.0",
-        "kitetail/zttp": "^0.6.0"
+        "guzzlehttp/guzzle": "^7.3",
+        "ext-json": "*"
     },
     "require-dev": {
         "vlucas/phpdotenv": "~2.2",
-        "phpunit/phpunit": "^6.0"
+        "phpunit/phpunit": "^9.0"
     },
     "autoload": {
         "psr-4": {
             "Xmhafiz\\FbFeed\\": "src/"
         },
         "files": ["helper/helpers.php"]
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
     }
 }
